--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,16 +54,19 @@
   </div>
 
 
-  <div fxFlex>
+  <div fxFlex *ngIf="leaders">
     <h2>Corporate Leadership</h2>
-    <mat-list>
+    <mat-list >
         <mat-list-item *ngFor="let leader of leaders">
           <img matListAvatar src={{leader.image}} alt={{leader.name}}>
-          <h1 matLine>{{leader.name}}</h1>
-          <p matLine>
-              <span> {{leader.description}} </span>
-          </p>
+          <h4 matLine>{{leader.name}} {{leader.abbr}}</h4>
+          <p matLine>{{leader.designation}}</p>
+          <p matLine>{{leader.description}}</p>
         </mat-list-item>
-    </mat-list>
+    </mat-list> 
+    <div fxFlex [hidden]="leaders">
+      <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+   </div>  
   </div>
+ 
 </div>
