--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div fxFlex [hidden]="dish">
+  <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+</div>
 
 <mat-card *ngIf="promotion" fxFlex>
   <mat-card-header>
@@ -32,6 +35,9 @@
     </p>
   </mat-card-content>
 </mat-card>
+<div fxFlex [hidden]="dish">
+  <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+</div>
 
 <mat-card *ngIf="leader" fxFlex>
   <mat-card-header>
@@ -42,9 +48,12 @@
   </mat-card-header>
   <img mat-card-image src={{leader.image}} alt={{leader.name}}>
   <mat-card-content>
-    <p>{{leader.description}}
-    </p>
+    <p>{{leader.designation}}</p>
+    <p>{{leader.description}}</p>
   </mat-card-content>
 </mat-card>
+<div fxFlex [hidden]="leader">
+  <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
+</div>
 
 </div>
