--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,7 +36,7 @@
     </div>    
   </div>
 
-  //Reactive Form and Validation
+  */React form and validation /*
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
