--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -39,11 +39,59 @@
         <mat-list-item *ngFor="let comment of dish.comments">
         <p matLine> <span>{{comment.comment}}</span></p>
         <p matLine> <span>{{comment.rating}} Stars</span></p>
-        <p matLine> <span>{{comment.author}} {{comment.date | date}}</span></p>
+        <p matLine> <span>--{{comment.author}} {{comment.date | date}}</span></p>
         </mat-list-item>
     </mat-list>
+
+<span class="flex-spacer"></span>
+
+<mat-list-item *ngIf="commentForm.value">
+  <p matLine> <span>{{commentForm.value.comment}}</span></p>
+  <p matLine> <span>{{commentForm.value.rating}} </span></p>
+  <p matLine> <span>{{commentForm.value.author}}</span></p>
+</mat-list-item>
+  
+<div class="fxFlex">
+    <form class="form-size" novalidate [formGroup]="commentForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="half-width">
+          <input matInput formControlName="author" placeholder="Name" type="text" required>
+          <mat-error *ngIf="formErrors.author">
+            {{ formErrors.author }}
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-slider
+  formControlName='rating'      
+  thumbLabel
+  [displayWith]="formatLabel"
+  tickInterval="1"
+  step="1"
+  min="0"
+  max="5"
+  aria-label="units"></mat-slider>
+  
+      </p>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="comment" placeholder="Your Comment" rows="12" required></textarea>
+          <mat-error *ngIf="formErrors.comment">
+            {{ formErrors.comment }}
+          </mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white"
+      [disabled]="commentForm.invalid">Submit</button>
+    </form>
+    </div>
+
   </div>
   <div fxFlex [hidden]="dish">
     <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
  </div>
+
+ 
+ 
+ 
 </div>
