--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,13 +36,13 @@
     </div>    
   </div>
 
-  */React form and validation /*
+  
 
   <div fxFlex fxFlexOffset="20px" class="form-size">
     <h3>Send us your Feedback</h3>
     <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
 
-    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
+    <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()" [hidden]="submitFlag">
       <p>
         <mat-form-field class="half-width">
           <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
@@ -91,6 +91,21 @@
       <button type="submit" mat-button class="background-primary text-floral-white"
       [disabled]="feedbackForm.invalid">Submit</button>
     </form>
+    <div [hidden]="(! submitFlag) || confirmFlag" [@expand]>
+      <mat-spinner></mat-spinner><h4>Submitting. . . Form</h4>
+   </div>
+   <div *ngIf="feedbackConfirm" [hidden]="(! submitFlag) || (! confirmFlag)" [@expand]>
+     <mat-list>
+       <h3>Your Submission:</h3>
+       <mat-list-item matLine>First name: {{feedbackConfirm.firstname}}</mat-list-item>
+       <mat-list-item matLine>Last name: {{feedbackConfirm.lastname}}</mat-list-item>
+       <mat-list-item matLine>Tel. number: {{feedbackConfirm.telnum}}</mat-list-item>
+       <mat-list-item matLine>Email: {{feedbackConfirm.email}}</mat-list-item>
+       <mat-list-item matLine>Contact You?: {{feedbackConfirm.agree}}</mat-list-item>
+       <mat-list-item matLine>How: {{feedbackConfirm.contacttype}}</mat-list-item>
+       <mat-list-item matLine>Feedback: {{feedbackConfirm.message}}</mat-list-item>
+
+     </mat-list>
   </div>
 
   
